[gd_scene load_steps=12 format=3 uid="uid://bugndnho20alx"]

[ext_resource type="Shader" path="res://Escenas/Shaders/espacio.gdshader" id="1_o5cuq"]
[ext_resource type="Script" path="res://Assets/Menu/Menu.gd" id="1_wyid5"]
[ext_resource type="Texture2D" uid="uid://dlmxbqcxpp3pi" path="res://Assets/Menu/IconJugar.png" id="2_jb0mx"]
[ext_resource type="Texture2D" uid="uid://dm6oxvxudd2jy" path="res://Assets/Menu/IconSalir.png" id="4_8lws6"]
[ext_resource type="FontFile" uid="uid://balefipo02o67" path="res://Fuentes/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf" id="5_igpc4"]
[ext_resource type="Texture2D" uid="uid://1dj688eaxv5q" path="res://Assets/Menu/IconOpciones.png" id="6_a6efh"]
[ext_resource type="PackedScene" uid="uid://bkg11a3spnfye" path="res://Assets/Menu/Opciones.tscn" id="9_m570e"]
[ext_resource type="AudioStream" uid="uid://bp4q3vup652jb" path="res://Assets/Menu/MenuMusica.mp3" id="11_gw3ee"]
[ext_resource type="Script" path="res://Assets/Menu/AudioMenu.gd" id="12_u5l7p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_54kb5"]
shader = ExtResource("1_o5cuq")
shader_parameter/dimensions = Vector2(1024, 600)
shader_parameter/small_stars = 50.0
shader_parameter/small_stars_far_size = 0.5
shader_parameter/small_stars_near_size = 1.0
shader_parameter/large_stars = 8.0
shader_parameter/large_stars_far_size = 0.5
shader_parameter/large_stars_near_size = 1.0
shader_parameter/far_stars_color = Color(0.5, 0, 1, 1)
shader_parameter/near_stars_color = Color(1, 1, 1, 1)
shader_parameter/base_scroll_speed = -0.05
shader_parameter/additional_scroll_speed = -0.05

[sub_resource type="Theme" id="Theme_fpuy8"]
default_font = ExtResource("5_igpc4")
default_font_size = 50

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wyid5")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -3
material = SubResource("ShaderMaterial_54kb5")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.130168, 0.0287595, 0.318535, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(960, 512)
stream = ExtResource("11_gw3ee")
volume_db = -15.0
autoplay = true
bus = &"Musica"
script = ExtResource("12_u5l7p")

[node name="Opciones" parent="." instance=ExtResource("9_m570e")]
visible = false
layout_mode = 1

[node name="Volver" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 888.0
offset_top = 952.0
offset_right = 1031.0
offset_bottom = 1020.0
theme = SubResource("Theme_fpuy8")
text = "Volver"

[node name="Botones" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -108.0
offset_right = 240.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2

[node name="Jugar" type="Button" parent="Botones"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_igpc4")
icon = ExtResource("2_jb0mx")
icon_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Botones"]
layout_mode = 2
size_flags_vertical = 3

[node name="OpcionesBoton" type="Button" parent="Botones"]
layout_mode = 2
icon = ExtResource("6_a6efh")
icon_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Botones"]
layout_mode = 2
size_flags_vertical = 3

[node name="Salir" type="Button" parent="Botones"]
layout_mode = 2
icon = ExtResource("4_8lws6")
icon_alignment = 1

[connection signal="finished" from="AudioStreamPlayer2D" to="AudioStreamPlayer2D" method="_on_finished"]
[connection signal="pressed" from="Volver" to="." method="_on_volver_pressed"]
[connection signal="pressed" from="Botones/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="Botones/OpcionesBoton" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="Botones/Salir" to="." method="_on_salir_pressed"]
